add quotes to expression brackets

--- a/letsencrypt-host-renew/handlers/main.yml
+++ b/letsencrypt-host-renew/handlers/main.yml
@@ -2,5 +2,5 @@
 - name: reload nginx
   shell: sh -c "sudo systemctl reload nginx.service"
   become: yes
-  become_user: {{ le.user }}
+  become_user: "{{ le.user }}"
   become_method: sudo
