--- a/letsencrypt-host-renew/defaults/main.yml
+++ b/letsencrypt-host-renew/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 le:
   user: bcssl
+  mail_recipient: postbote@biocrafting.net
   cert: /home/acme/.acme.sh/account.biocrafting.net/fullchain.cer
   key: /home/acme/.acme.sh/account.biocrafting.net/account.biocrafting.net.key
