--- a/letsencrypt-host-renew-nginx/tasks/main.yml
+++ b/letsencrypt-host-renew-nginx/tasks/main.yml
@@ -17,7 +17,7 @@
   register: nginx_config
 
 - name: validate nginx conf
-  command: nginx -t
+  command: sudo nginx -t
   changed_when: false
   
 - local_action: mail
