fix nginx reload

--- a/letsencrypt-host-renew-nginx/tasks/main.yml
+++ b/letsencrypt-host-renew-nginx/tasks/main.yml
@@ -19,3 +19,6 @@
 - name: validate nginx conf
   shell: sh -c "sudo nginx -t"
   changed_when: false
+
+- name: reload nginx
+  shell: sh -c "sudo systemctl reload nginx.service"
