--- a/letsencrypt-host-renew-nginx/tasks/main.yml
+++ b/letsencrypt-host-renew-nginx/tasks/main.yml
@@ -3,6 +3,10 @@
   file: path=/etc/ssl/{{ le.user }}/letsencrypt/{{ ansible_date_time.year }}-{{ ansible_date_time.month }} state=directory owner={{ le.user }} group={{ le.user }} mode=0700
   register: directory
 
+- name: Copy ca
+  when: directory| success
+  copy:  src={{ le.ca }} dest=/etc/ssl/{{ le.user }}/letsencrypt/{{ ansible_date_time.year }}-{{ ansible_date_time.month }}/ca.pem  owner={{ le.user }} group={{ le.user }} mode=0600
+
 - name: Copy cert
   when: directory| success
   copy:  src={{ le.cert }} dest=/etc/ssl/{{ le.user }}/letsencrypt/{{ ansible_date_time.year }}-{{ ansible_date_time.month }}/cert.pem  owner={{ le.user }} group={{ le.user }} mode=0600
